[gd_scene load_steps=2 format=3 uid="uid://cwkfpsen3b65y"]

[ext_resource type="Script" path="res://scenes/test_backpack_grid.gd" id="1_fdsns"]

[node name="test" type="Node2D"]
script = ExtResource("1_fdsns")

[node name="open_test_backpack" type="Button" parent="."]
offset_left = 60.0
offset_top = 395.0
offset_right = 132.0
offset_bottom = 426.0
text = "打开背包"

[node name="close_backpack" type="Button" parent="."]
offset_left = 189.0
offset_top = 395.0
offset_right = 261.0
offset_bottom = 426.0
text = "关闭背包"

[node name="add_items" type="Button" parent="."]
offset_left = 59.0
offset_top = 477.0
offset_right = 131.0
offset_bottom = 508.0
text = "添加物品"

[node name="view_array" type="Button" parent="."]
offset_left = 315.0
offset_top = 480.0
offset_right = 387.0
offset_bottom = 511.0
text = "查看数组"

[connection signal="button_down" from="open_test_backpack" to="." method="_on_open_test_backpack_button_down"]
[connection signal="button_down" from="close_backpack" to="." method="_on_close_backpack_button_down"]
[connection signal="button_down" from="add_items" to="." method="_on_add_items_button_down"]
[connection signal="button_down" from="view_array" to="." method="_on_view_array_button_down"]
